Fixed layout issue.

--- a/src/app/modules/media/components/mt-media-info/mt-media-info.component.scss
+++ b/src/app/modules/media/components/mt-media-info/mt-media-info.component.scss
@@ -48,7 +48,7 @@ sup {
         border-left-style: solid;
         border-left-width: 1px;
         box-sizing: border-box;
-        flex: 0 0 192px;
+        flex: 0 0 200px;
         margin-top: -$spacing-2xs;
         padding: $spacing-2xs 0 $spacing-2xs $column-padding;
 
